@@ -1,3 +1,9 @@
+2002-03-18  Alexandre Oliva  <aoliva@redhat.com>
+
+	* config/tc-mips.c (md_estimate_size_before_relax): Do not modify
+	the EXTENDED bit here; report the estimate according to the
+	current size.
+
 2002-03-18  Tom Rix  <trix@redhat.com>
 
 	* configure.in: Add AIX 5 support.
